force-app/main/default/objects/OrderSummary/fields/avaoms__Cross_Border_Summary__c.field-meta.xml
<CustomField>
    <fullName>avaoms__Cross_Border_Summary__c</fullName>
    <inlineHelpText>Cross-border messages</inlineHelpText>
    <label>Cross Border Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>