force-app/main/default/objects/OrderSummary/fields/avaoms__QuantityChanged__c.field-meta.xml
<CustomField>
    <fullName>avaoms__QuantityChanged__c</fullName>
    <label>Quantity Changed</label>
    <summarizedField>OrderItemSummary.Quantity</summarizedField>
    <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>