force-app/main/default/objects/OrderSummary/fields/avaoms__Tax_Date__c.field-meta.xml
<CustomField>
    <fullName>avaoms__Tax_Date__c</fullName>
    <description>Initially updated with a workflow</description>
    <inlineHelpText>Enter Tax Calculation Date</inlineHelpText>
    <label>Tax Date</label>
    <type>DateTime</type>
</CustomField>