force-app/main/default/objects/OrderSummary/fields/FO_Count__c.field-meta.xml
<CustomField>
    <fullName>FO_Count__c</fullName>
    <label>FO Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>