force-app/main/default/objects/OrderSummary/fields/Gift_Certification_Applied__c.field-meta.xml
<CustomField>
    <fullName>Gift_Certification_Applied__c</fullName>
    <formula>OriginalOrder.Gift_Certification_Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Certification Applied</label>
    <type>Checkbox</type>
</CustomField>