force-app/main/default/objects/OrderSummary/fields/InventoryTransferAttempts__c.field-meta.xml
<CustomField>
    <fullName>InventoryTransferAttempts__c</fullName>
    <label>Inventory Transfer Attempts</label>
    <summaryForeignKey>OrderSummaryRoutingSchedule.OrderSummaryId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>