force-app/main/default/objects/OrderSummary/fields/Is_GSK__c.field-meta.xml
<CustomField>
    <fullName>Is_GSK__c</fullName>
    <formula>OriginalOrder.Opportunity.GSK_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is GSK</label>
    <type>Checkbox</type>
</CustomField>