force-app/main/default/objects/OrderSummary/fields/Is_Special_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Order__c</fullName>
    <formula>OriginalOrder.Is_Special_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Special Order?</label>
    <type>Checkbox</type>
</CustomField>