force-app/main/default/objects/OrderSummary/fields/isCorrectionOrder__c.field-meta.xml
<CustomField>
    <fullName>isCorrectionOrder__c</fullName>
    <label>isCorrectionOrder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>