force-app/main/default/objects/OrderSummary/fields/IsVRByPassed__c.field-meta.xml
<CustomField>
    <fullName>IsVRByPassed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsVRByPassed</label>
    <type>Checkbox</type>
</CustomField>