force-app/main/default/objects/OrderSummary/fields/Joe_M_Test_9_13_23__c.field-meta.xml
<CustomField>
    <fullName>Joe_M_Test_9_13_23__c</fullName>
    <description>Total of Product and Shipping</description>
    <formula>TotalProductAmount +  TotalDeliveryAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TotalProductAmount + TotalDeliveryAmount</inlineHelpText>
    <label>Joe M Test 9-13-23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>