force-app/main/default/objects/OrderSummary/fields/noCatalogInOrder__c.field-meta.xml
<CustomField>
    <fullName>noCatalogInOrder__c</fullName>
    <label>noCatalogInOrder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>