force-app/main/default/objects/OrderSummary/fields/openAccountChequeNumber__c.field-meta.xml
<CustomField>
    <fullName>openAccountChequeNumber__c</fullName>
    <label>OpenAccountChequeNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>