force-app/main/default/objects/OrderSummary/fields/openAccountCreditPartiallyPaid__c.field-meta.xml
<CustomField>
    <fullName>openAccountCreditPartiallyPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OpenAccountCreditPartiallyPaid</label>
    <type>Checkbox</type>
</CustomField>