force-app/main/default/objects/OrderSummary/fields/order_notes__c.field-meta.xml
<CustomField>
    <fullName>order_notes__c</fullName>
    <label>order_notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>