force-app/main/default/objects/OrderSummary/fields/Order_Summary_case__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary_case__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Summary case</label>
    <type>Text</type>
</CustomField>