force-app/main/default/objects/OrderSummary/fields/poNumber__c.field-meta.xml
<CustomField>
    <fullName>poNumber__c</fullName>
    <label>poNumber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>