force-app/main/default/objects/OrderSummary/fields/thirdPartyCarrierAccountBilling__c.field-meta.xml
<CustomField>
    <fullName>thirdPartyCarrierAccountBilling__c</fullName>
    <label>thirdPartyCarrierAccountBilling</label>
    <length>100</length>
    <type>Text</type>
</CustomField>