force-app/main/default/objects/OrderSummary/validationRules/cannot_move_to_prior_status_if_Returned.validationRule-meta.xml
<ValidationRule>
    <fullName>cannot_move_to_prior_status_if_Returned</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISNEW() )&amp;&amp; ISCHANGED( Status ) &amp;&amp; CASE(PRIORVALUE(Status ), 
&quot;Returned&quot;, 6 ,0
) &gt; 
CASE(Status ,
&quot;Created&quot;,1,
&quot;In Review&quot;,2,
&quot;Approved&quot;,3,
&quot;Waiting to Fulfill&quot;,4 ,
&quot;Fulfilled&quot;, 5,
&quot;Returned&quot;, 6 ,
&quot;Canceled&quot;,7, 0
)</errorConditionFormula>
    <errorMessage>Once the status is Returned, you cannot change it back.</errorMessage>
</ValidationRule>