force-app/main/default/objects/OrderSummary/validationRules/cant_move_to_return_or_cancel_special.validationRule-meta.xml
<ValidationRule>
    <fullName>cant_move_to_return_or_cancel_special</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Is_Special_Order__c ,
  ISPICKVAL( Status , &quot;Returned&quot;) || ISPICKVAL( Status , &quot;Canceled&quot;)
)</errorConditionFormula>
    <errorMessage>Is Special Order checkbox is checked Can&apos;t Move to Return or Cancel</errorMessage>
</ValidationRule>