force-app/main/default/objects/OrderSummary/listViews/Order_Summaries_Not_Processed.listView-meta.xml
<ListView>
    <fullName>Order_Summaries_Not_Processed</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>OrderedDate</columns>
    <columns>GrandTotalAmount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Approved,Waiting to Fulfill</value>
    </filters>
    <filters>
        <field>OrderedDate</field>
        <operation>lessThan</operation>
        <value>4/22/2024 12:00 AM</value>
    </filters>
    <label>Order Summaries - Not Processed</label>
</ListView>